--- a/VMEngine/VMEngine.vcxproj
+++ b/VMEngine/VMEngine.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="includes\VMEngine\Game.h" />
     <ClInclude Include="includes\VMEngine\Graphics\GraphicsEngine.h" />
     <ClInclude Include="includes\VMEngine\Graphics\ShaderProgram.h" />
+    <ClInclude Include="includes\VMEngine\Graphics\Texture.h" />
     <ClInclude Include="includes\VMEngine\Graphics\VertexArrayObject.h" />
   </ItemGroup>
   <ItemGroup>
@@ -146,11 +147,14 @@
     <ClCompile Include="source\VMEngine\Game.cpp" />
     <ClCompile Include="source\VMEngine\Graphics\GraphicsEngine.cpp" />
     <ClCompile Include="source\VMEngine\Graphics\ShaderProgram.cpp" />
+    <ClCompile Include="source\VMEngine\Graphics\Texture.cpp" />
     <ClCompile Include="source\VMEngine\Graphics\VertexArrayObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Game\Shaders\SimpleShader\SimpleShader.sfrag" />
-    <None Include="Game\Shaders\SimpleShader\SimpleShader.svert" />
+    <None Include="Game\Shaders\TextureShader\TextureShader.sfrag" />
+    <None Include="Game\Shaders\TextureShader\TextureShader.svert" />
+    <None Include="Game\Shaders\VertexShader\VertexShader.sfrag" />
+    <None Include="Game\Shaders\VertexShader\VertexShader.svert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
