--- a/VMEngine/VMEngine.vcxproj.filters
+++ b/VMEngine/VMEngine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="includes\VMEngine\Graphics\ShaderProgram.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="includes\VMEngine\Graphics\Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\stb_image\stb_image.cpp">
@@ -53,9 +56,14 @@
     <ClCompile Include="source\VMEngine\Graphics\ShaderProgram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\VMEngine\Graphics\Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Game\Shaders\SimpleShader\SimpleShader.svert" />
-    <None Include="Game\Shaders\SimpleShader\SimpleShader.sfrag" />
+    <None Include="Game\Shaders\VertexShader\VertexShader.svert" />
+    <None Include="Game\Shaders\VertexShader\VertexShader.sfrag" />
+    <None Include="Game\Shaders\TextureShader\TextureShader.svert" />
+    <None Include="Game\Shaders\TextureShader\TextureShader.sfrag" />
   </ItemGroup>
 </Project>
