--- a/VMEngine/VMEngine.vcxproj.filters
+++ b/VMEngine/VMEngine.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="includes\VMEngine\Math\Transformations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="includes\VMEngine\Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\stb_image\stb_image.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\VMEngine\Graphics\Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\VMEngine\Input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
